test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-owned.good
assign-nonnil-owned-from-oknil-owned.chpl:8: error: Cannot assign to owned MyClass from owned MyClass?
